--- a/produtos.html
+++ b/produtos.html
@@ -2,26 +2,26 @@
 <html lang="pt-br">
         <head>
             <meta charset="UTF-8">
+            <title>Barbearia Alura</title>
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="apple-touch-icon"  href>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <link rel="stylesheet" href="reset.css">
-            <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="style.css">
+            <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Barbearia Alura</title>
           </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png" </h1>
+              <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="produtos.html">Produtos</a></li>
                         <li> <a href="contato.html">Contato</a></li>
-                        <li><a href="depoimento.html">Depoimento</a></li>
-                        
+                        <li> <a href="depoimento.html">Depoimento</a></li>
                     </ul>
                 </nav>
             </div>
